# OS

./: .gitignore  .gitmodules  README.md  creator.cpp  employee.h  main.cpp  receiver.cpp  reporter.cpp  sender.cpp
Lab1/: CMakeLists.txt  README.md  creator.cpp  employee.h  main.cpp  reporter.cpp
Lab1/tests/: CMakeLists.txt  tests.cpp
Lab2/: CMakeLists.txt  README.md
Lab2/src/: main.cpp
Lab2/tests/: tests.cpp
Lab3/: CMakeLists.txt  README.md  main.cpp
Lab3/tests/: tests.cpp
Lab4/: README.md  receiver.cpp  sender.cpp
Lab5/: README.md  client.cpp  employee.h  server.cpp
Lab_2/: README.md  main.cpp
